@@ -1,3 +1,5 @@
+DIST deblob-4.0 129952 SHA256 c3d8e9a9728d5c1fc11b1112f5343b14e46a8cf2880e10399a840bc94b6e2ad3 SHA512 055205394487dbc0022f9531fb76d0be51ca3ec4e119232cc0972790d1532c680e1367eb36a9f40529f0ab1d76f64240b1e8a07cb02d3605d594c06e3547f1bb WHIRLPOOL db32b66231e552ac6e3651152eb2b3212ef0863842cd352bd2f1b1080b9ea5543f1f7ed0e7958a9f4b115559233dc1817560e896c789378ea7b68b527b721ca8
+DIST deblob-check-4.0 670921 SHA256 042b511913187672d9a0512765e662ba5d4283812ebebf424f778eb08fa359bc SHA512 a27e3530cd3028041445cf8c5f49ad7827a7cf2b511de28851d2b09c28347cf2be667a7494bd698939c007fb77595699c1f61fb76249ae87658e1d12e855d2a1 WHIRLPOOL 953d8e6eed10971ed67a4573449b9a536ad693a2130153a6fc7cc9ea3e2daea21ca002c8df80126f7e318f75bec82c3f6e99fe43155817e2e2a52b5949dc5d2d
 DIST genpatches-3.18-13.base.tar.xz 327876 SHA256 a19044798e6bd059d9c42ca97c6b73c6ad95efa9d8a475598350b3d5f5383955 SHA512 99964f90ab24cea9c05fb82fd7beb62d0309767d165d3ade8f2976fb1bc4e83070e59381524731006015e804032ba9672b1308018fb21b6489726fffd4aacbd4 WHIRLPOOL 29d33dfa0a3de8ee0f429c975ac4d2fb8c73d24727b0a9ee597f3eedbc973430bc89145b37f40f322106f6f407b4ebf361eb510a649e47ac62622ab211c3c0e6
 DIST genpatches-3.18-13.experimental.tar.xz 61620 SHA256 4aa5c2ca964a8315f9640d8f88c62274cf89e83aaa38b3935e1eefbec9b38097 SHA512 9073feb943d5dde1c7096bb5d6528f5f9150d2b61a4f9d25da5c5d6d7d9e2720dc99c0774fa1a227cdd02b8457ef8bd43cdecf14c215bfc83b11a3a5e5967bd1 WHIRLPOOL 4add10891a715fb1666b5502b7ddfe8dad8edfd9db51dc57ca7475aa324f600370c6901940dfd382fdf12a8a9ef0b266779515f38de0b41370538caba1c3221f
 DIST genpatches-3.18-13.extras.tar.xz 16188 SHA256 f2e51800f79c814199bcbc9911595b2998afef59a94b931a30c6ad88bba47eb2 SHA512 fe5afdbaf6c48757d2e289986346052068da1b614db58606107ec2736debe22aff55c190050340e7716f39f30943a154a2239096f167f2831d50dc0a94c5e12b WHIRLPOOL 28c4107ca46f5d7782609c7ed1b2789bc5bd1a6b1b5d339cf7aae32d5234a2c0c8da60d93656f260b56cfed4731b9a2b6dec3f81fd1d6445cd828cc4230e5b9c
@@ -7,11 +9,15 @@ DIST genpatches-3.19-7.extras.tar.xz 16288 SHA256 3801105359570ea1ddeb1f17440dd2
 DIST genpatches-4.0-2.base.tar.xz 7964 SHA256 466b3f299eebc6444abf670ba555bb36082b52859b43daeb8ac8ab7dbd5194a3 SHA512 bd53d86cf6e33cb07f0f3a52b0f0195f4211c48186c967670ff4f8c7df2ee60f6807a8c11661da7d944430096ab03daa30f63d7b3d12ee98024098a22f2f20b0 WHIRLPOOL f379cc9f5f36dbcd3ce90832e990ae54710fb75f2c3ef41bcd7b997177f2495f82329b8ce521af04ab7187b106ddc41b2f78ff4e56a6f974516230f9cf8b3f28
 DIST genpatches-4.0-2.experimental.tar.xz 4900 SHA256 6f60c5a6be8bc906f054de09edd79e4d15f16c3750c014aafd7da5e14f90c4e7 SHA512 f38eb5dbf237a5a0798deec5d0d47dc945eb9a12dd5b286afa65a1480bdb6b7eedb0792cd44fa1cb6c03dd85bc56bfd4cbfdf66316313f718430655a39925e39 WHIRLPOOL 8b3e8922678f8886d7df14941db246d6d8bf438c6545d90999d2bc6636f164fc1790df2846441e683053f6a62054892d80cb9ff67cebc4871a8b022c9e646237
 DIST genpatches-4.0-2.extras.tar.xz 16288 SHA256 3801105359570ea1ddeb1f17440dd2da880f421e12414f03778fa7f58306ecd6 SHA512 23f46e15c6d26a843fbc933eb0ac1896dc5801bf7909ce734981460024ec86d83d45a0e82986d37bffa4a47d46d6d7b634e11a9eea12ed4adbbd6cce1ff2e6b7 WHIRLPOOL 7cb34059f05ee3efefa8d0d2d720fa37ae05fe3407d2828053218dafe699c4b4473b95aac042c1edfd8dd5b551869659c6e0eed82896e4193fe2a3d4c9b00efe
+DIST genpatches-4.0-6.base.tar.xz 118672 SHA256 228c38e1e691fc3b3862a5de627c71ba9bcf1aafd10317a9ece83a13e041ed24 SHA512 02c3cbe7982173121f03ca9424e5fa04b27f985c2f81b7469559eda4d8824e4bb348a0b9b341a9e34c7803ea341161ff306aee5d6cb73617e01fe7aad327e05f WHIRLPOOL 685c62001c6e29efbf800471ed95f8413368c6dc194689c04dea44c5b9148e09d3d79e026f91a2054a84a991bd741dc8de08838c3cd9b9c94fb8dc981db9e953
+DIST genpatches-4.0-6.experimental.tar.xz 61620 SHA256 ea7359c8a3e4e8c53ccfa0573158f080e4ed2a458f6de654097cf21134c0910d SHA512 69b0f51e43c2a5712fd8eff3f8292fe31109e33a24b51bb0e637d15bbf2329767896d6c56f3f178ad6e9d1f69ebe6875108941f18a4a10747405be385e47ce86 WHIRLPOOL 657758e5a8b7a9c764f1d8a875be71ee079907aa6ab79c90ae2632c4ab8445a86ad97cb3ef70e424a6bd62d4c937de577cf44a10aeea4a41d8dd6d1bcf803952
+DIST genpatches-4.0-6.extras.tar.xz 16280 SHA256 205c87c3d133a57d6ca42e2ce107cf64cbedd64fd356c601ca0af29248af5c1e SHA512 61cea7f5a8919418bbea96599f7decf804d97d9e6b8729e7e5dc4f077d54c86db7b0087f70b87183420798f16c1036242f1b857ff2598edf0902ff4fa6bd2890 WHIRLPOOL fde8c4c909a26d7bf2d00e35d1ee45e03c4710871f0a2cffdfbcd1109aac0b4f3215bf0ef5dc6562e9fb9d7447c1330f91a08ffa78912b3857cd3ddab5d10a3b
 DIST linux-3.18.tar.xz 80934708 SHA256 becc413cc9e6d7f5cc52a3ce66d65c3725bc1d1cc1001f4ce6c32b69eb188cbd SHA512 2f0b72466e9bc538a675738aa416573d41bbbd7e3e2ffd5b5b127afde609ebc278cec5a3c37e73479607e957c13f1b4ed9782a3795e0dcc2cf8e550228594009 WHIRLPOOL 81634af631b7d30ccd1f4798f96f44d9aa0ba6609b73f2747eb6aebaf7a99487fb2dbd45767605186182533cb222bfd9236e8dd5e11a04fdb67c211e4e0a91d6
 DIST linux-3.19.tar.xz 81688872 SHA256 be42511fe5321012bb4a2009167ce56a9e5fe362b4af43e8c371b3666859806c SHA512 d77bfd9b1cd524ac50bb5a93808955be2f9bcd2ec0badcc8aa6a63401e212f891fd14bd27c6441174ba5d70ab875b9e76c7ebc95f046e31aff1d40790d30351c WHIRLPOOL 76a17bb3d7c30cee19e135940f3607106efb2984061f946f0da9a2ddd602dc1bfc7e6f8970975cfb113d13f23a75415f39938204af266e2819e7a239b6f46778
 DIST linux-4.0.tar.xz 82313052 SHA256 0f2f7d44979bc8f71c4fc5d3308c03499c26a824dd311fdf6eef4dee0d7d5991 SHA512 ce13d2c1c17908fd9a4aa42bb6348a0cb13dd22e560bd54c61b8bfdf62726d6095f130c59177a2fe4793b7dc399481bf10d3556d1d571616000f180304e5a995 WHIRLPOOL c481256e23dc82209942d4f2fc9a94aa7fc4c3c69b05eaa041a58ca4bdc5781274ec4c49d597ccf94b634d61418ec578d20a6569c6c7052b4d3cf33611c99001
 EBUILD gentoo-sources-3.18.11.ebuild 712 SHA256 009e2690cab31bfa1b643ad00c405a42e0366ad8dbe4d9e0a7e8f99b29ae8812 SHA512 f108999da87efd552d5ec7ba64c26dcd5f53fecb9e64e8f7c4eba0da6f2c1d0e9d8d30d0fc13c35a110060729a416e39f9c129deba242040d659415b24901bbd WHIRLPOOL 08cefe92e30d6a43a7139f3b8c2028f6ec1fe9c510c7b1660f3938a27c41680514ff214df0b3e1194e402ea63af1e744779186305484885793cfb106f3046e9f
 EBUILD gentoo-sources-3.19.6.ebuild 816 SHA256 271512adacede62d200a7cd8dc9ad14cdadfee32b2158f9fd2b8aa7ebd2447c2 SHA512 8cbfe2f92a0f7426df1d5c73cd14367d7de553b6e49aafe73198480c4adc02844d5e9a2e3dc02cce9aceab4302fd837b42d796d7e0fd2475fac4cd6d8b647bcd WHIRLPOOL 89c60a4e16cee90190dd1b2f65a2379d816bf7e40b54c612c445e418e5412bc9482eee1ca3109a243d6fa2a78ec8bb50398b988c22b4e8e487b5418d5de07592
 EBUILD gentoo-sources-4.0.1.ebuild 711 SHA256 9435de7363c4fbb93a2a3d2861931a5be5350c1acaf58128223038eff5ca3ea3 SHA512 0ac92117fbe9d6d0209d09473231beb5617b555940304fe55efb734dc85ac9b52199562f09beee4c62491d6e929b6047ea32b09064f11d003f4da97402ee1d93 WHIRLPOOL cbf55d2521dd3212545f9690db597a5aa593f4928e6c38afb0fb2492a80fecb4e6c0fd13494847b0d436b5c2ac315dcd03d84696cd43292cd96bae307727c7bd
-MISC ChangeLog 447 SHA256 1bf083072a66228e5d4fbc5305da35ad4bca2287159fbfa19f1d4c2812d7f069 SHA512 470cede723be2d1391c2ab6030858e2393b850f753a827bfb4b11e296f487bc2d4a7557110f9e41655ae93e1cfe3a78e2baeb9bd10aa2ea1c9a5c603b1f7de3a WHIRLPOOL 1ac37babd4f120fbf2c502d7f9418cbcfd9bf0afd8ea9fe1b1cdbad52eedad2129f6d41c8649246ed14d34d90639b625d6d7e0f83d6242580f45b23cbc8c2563
+EBUILD gentoo-sources-4.0.4.ebuild 711 SHA256 b962ca2cb9cab8a8a33be5113f8a99bdaf49417769559bfd529b4cfc8015a99f SHA512 bd3b25106517d7f0d7eff3d8d6ad0528c296a69f11e734f2a73589bac906b4f5a60b9f674416abb32e09b8596604bd29b393d0f66887a098457b09f32df7fe09 WHIRLPOOL 7c73efae39d676f3c5a287f40e20bbe7c852517786ad0bca4ff670381b385bd53a48f61ef59c7e8ed3fbe024a04a7ea16924b518bad1f86e431920b89875cc74
+MISC ChangeLog 618 SHA256 bc36a877538163a22d5e2fcaeec6ec3402cbdb97d372579be1988e25cf1bda35 SHA512 39227e600e43b4f2e28be2ae7424d0d9119239256f63d3f5e0aa5f34e7e6fa0bb81bea4e8d07fd32092e62833b505c000cc3a35c5c2816aad7d4f95f5274d4fd WHIRLPOOL da4f3ad60d23ec3d28e2a3db78c65c5cb29d98075f731c06820a4ce6c81ab039107df3359323b855429aaf2029d3ea60fc9c413fe6f1e144bb847d9352935efc
 MISC metadata.xml 782 SHA256 57e7c9d3eca72be16becea5b3da4eb56fb571b6e223ed64c1cb3a295d88a4e8f SHA512 e9811595421fdb215fe423865e0ea8c730b64066dceb24c5ae2833a367681da3102fa96cbf45547f253d32cd2f1aad06e5c7f4fbe59c63e4e7c2c9040c50c0f9 WHIRLPOOL a23d4ac19fe926cfd6bc085b7388c71487b515a65f5307e67ccf37b07febb09b82126ab785df45d583a90f2b79d1c32a2e37194afcf461af4295e6c151a04f9e
